<resources>
    <string name="app_name">Money Saver</string>
    <string name="login">Login</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="or">or</string>
    <string name="txtRegister">Create new account</string>
    <string name="signup">Sign Up</string>
    <string name="register">Register</string>
    <string name="backToLogin">Already have an account</string>
    <string name="facebook_app_id" translatable="false">1079019669573441</string>
    <string name="inFlow">InFlow</string>
    <string name="outFlow">OutFlow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transaction_title">Transaction Title</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="transaction_amount">Transaction Amount</string>
    <string name="transaction_desciption">Transaction Description</string>
    <string name="transaction_addTransaction">Add</string>
    <string name="today">Today</string>
    <string name="this_week">This Week</string>
    <string name="this_month">This Month</string>
    <string name="category">Category</string>
    <string name="spend">Spend</string>
    <string name="limit">Limit</string>
    <string name="saving">Saving</string>
    <string name="transaction_date">Date</string>
    <string name="categoryName">Category Name</string>
    <string name="categoryDesc">Category Description</string>
    <string name="log_out">Log out</string>
    <string name="drawer_open">Open Drawer Navigation</string>
    <string name="drawer_close">Close Drawer Navigation</string>
    <string name="cancel">Cancel</string>
    <string name="amount">Amount</string>
    <string name="plan_payment_title">Plan Payment Title</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="done">Done</string>
    <string name="recommendTitle">Recommended Financial Plan</string>
    <string name="necessitiesTxt">Necessities</string>
    <string name="playTxt">Play</string>
    <string name="investmentTxt">Investments</string>
    <string name="educationTxt">Education</string>
    <string name="savingTxt">Long-term saving</string>
    <string name="actualPlanTxt">Your Current Expenses</string>
    <string name="giveTxt">Give (gift)</string>
</resources>