<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AddPlanPaymentActivity">

    <EditText
        android:id="@+id/edtAddPlanPayment_Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/plan_payment_title"
        android:inputType="textPersonName"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtAddPlanPayment_Category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:focusable="false"
        android:gravity="center"
        android:hint="@string/category"
        android:inputType="textPersonName"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtAddPlanPayment_Title" />

    <Spinner
        android:id="@+id/spnAddPlanPayment_TransactionType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:gravity="center"
        android:paddingLeft="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtAddPlanPayment_Category" />

    <EditText
        android:id="@+id/edtAddPlanPayment_Amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/amount"
        android:inputType="number|numberDecimal"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnAddPlanPayment_TransactionType" />

    <EditText
        android:id="@+id/edtAddPlanPayment_Date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:focusable="false"
        android:gravity="center"
        android:hint="@string/transaction_date"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtAddPlanPayment_Amount" />

    <Spinner
        android:id="@+id/spnAddPlanPayment_RepeatType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:gravity="center"
        android:paddingLeft="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtAddPlanPayment_Date" />

    <EditText
        android:id="@+id/edtAddPlanPayment_Description"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:gravity="center|top"
        android:hint="@string/transaction_desciption"
        android:inputType="textMultiLine"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnAddPlanPayment_RepeatType" />

    <Button
        android:id="@+id/btnAddPlanPayment_Cancel"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="32dp"
        android:text="@string/cancel"
        app:backgroundTint="@color/browser_actions_title_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtAddPlanPayment_Description" />

    <Button
        android:id="@+id/btnAddPlanPayment_Add"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:text="@string/transaction_addTransaction"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtAddPlanPayment_Description" />

</androidx.constraintlayout.widget.ConstraintLayout>