<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.AddTransactionFragment">

    <EditText
        android:id="@+id/edtAddTransaction_Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/transaction_title"
        android:inputType="textPersonName"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/spinnerRelative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/edit_text_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtAddTransaction_Title">

        <Spinner
            android:id="@+id/spnAddTransaction_Type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:paddingLeft="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />
    </RelativeLayout>

    <EditText
        android:id="@+id/edtAddTransaction_Amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/transaction_amount"
        android:inputType="number|numberDecimal"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerRelative" />

    <EditText
        android:id="@+id/edtAddTransaction_Description"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:gravity="center|top"
        android:hint="@string/transaction_desciption"
        android:inputType="textMultiLine"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtAddTransaction_Amount" />

    <Button
        android:id="@+id/btnAddTransaction_Add"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/transaction_addTransaction"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtAddTransaction_Description" />

</androidx.constraintlayout.widget.ConstraintLayout>